<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="NID">NID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="select_user">Select User</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message</string>
</resources>